# slsengine-rs

./: .gdb_history  .gitignore  Cargo.toml  README.md  Web.toml  build.rs
assets/: Makefile  asset_list.toml  blinn-phong.frag  blinn-phong.vert  earth.glb  earth.gltf  flat-shading.frag  flat-shading.vert  prelude.js  stickman.blend  stickman.glb
assets/Textures/: stickman-paint.json
assets/js/: prelude.js
assets/models/: stickman.blend1  stickman.glb
assets/shaders/: brdf.frag  brdf.vert  envmap.frag  envmap.vert
assets/shaders/spirv/: brdf.frag.spv  brdf.vert.spv  envmap.frag.spv  envmap.vert.spv
assets/shaders/vulkan/: brdf.frag  brdf.vert  envmap.frag  envmap.vert  flat.frag  flat.vert  fractal.comp
assets/vulkan/: flat-shading.frag  flat-shading.frag.spv  flat-shading.spv  flat-shading.vert  flat-shading.vert.spv  sample_compute.comp.spv
desktop-launch/: Cargo.toml
desktop-launch/src/: main.rs  sdl_platform.rs
examples/: vk_fractal.rs  vk_run.rs  webgl_run.rs
examples/vulkan/: Cargo.toml
examples/vulkan/src/: main.rs
examples/webgl/: package-lock.json  package.json  webpack.config.js
examples/webgl/src/: example-webgl.js
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/webgl/: .gitignore  Cargo.toml  build.rs
lib/webgl/src/: lib.rs
slsengine-backend-gl/: Cargo.toml
slsengine-backend-gl/src/: gl_platform.rs  lib.rs
slsengine-backend-vk/: Cargo.toml
slsengine-backend-webgl/: .gitignore  Cargo.toml
slsengine-backend-webgl/src/: lib.rs
slsengine-platform/: Cargo.toml
slsengine-platform-sdl/: Cargo.toml
slsengine-platform-sdl/src/: config.rs  lib.rs
slsengine-render/: .gitignore  Cargo.toml  package.json  webpack.config.js
slsengine-render/src/: backend.rs  camera.rs  color.rs  components.rs  ios_run.rs  lib.rs  material.rs  mesh.rs  model.rs  traits.rs  web_entry.rs
slsengine-render/src/backend_gl/: errors.rs  gl_materials.rs  gl_mesh.rs  gl_renderer.rs  objects.rs  textures.rs
slsengine-render/src/backend_vk/: pipelines.rs  sdl_vulkan.rs  shaders.rs  vk_mesh.rs  vulkan_renderer.rs
slsengine-render/src/render-sample/: main.rs
slsengine-render/web/: index.js
slsengine_entityalloc/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  wasm-server.js  webpack.config.js
slsengine_entityalloc/js/: index.js
slsengine_entityalloc/src/: allocator.rs  any_array.rs  arch.rs  components.rs  index_array.rs  lib.rs  wasm.rs
slsengine_entityalloc/tests/: index.html  test.js  test_ffi.c  test_ffi.rs
slsengine_shaders/: Cargo.toml
slsengine_shaders/src/: lib.rs
src/: application.rs  assets.rs  config.rs  lib.rs  main.rs  platform_system.rs  renderer.rs  sdl_platform.rs  system.rs  test.rs
src/game/: camera.rs  component.rs  component_stores.rs  main_loop.rs  mod.rs  populate_world_system.rs  resource.rs  system.rs  timer.rs  vec_store.rs  world.rs
src/game/built_in_components/: mod.rs
src/renderer/: camera.rs  components.rs  gl_materials.rs  gl_renderer.rs  material.rs  mesh.rs  mod.rs  model.rs  objects.rs  resources.rs  textures.rs  traits.rs
src/renderer/backend_gl/: envmap.rs  errors.rs  gl_materials.rs  gl_mesh.rs  gl_renderer.rs  mod.rs  objects.rs  program.rs  text_renderer.rs  textures.rs
src/renderer/backend_vk/: mod.rs  pipelines.rs  sdl_vulkan.rs  shaders.rs  vk_mesh.rs  vulkan_renderer.rs
src/renderer_common/: material.rs  mod.rs  model.rs
src/renderer_vk/: mod.rs  sdl_vulkan.rs
tests/: run_gltests.rs
xcode/slsengine-run-ios/: .gitignore  Cargo.toml
xcode/slsengine-run-ios/slsengine-run-ios/: main.m  slsengine.h
xcode/slsengine-run-ios/slsengine-run-ios.xcodeproj/: project.pbxproj
xcode/slsengine-run-ios/slsengine-run.xcworkspace/: contents.xcworkspacedata
xcode/slsengine-run-ios/src/: lib.rs
