cargo-features = ["profile-overrides"]
[package]
name = "slsengine"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition="2018"

[features]
default=["backend-vulkan", "gl-debug-output"]
backend-vulkan = [ "vulkano", "vulkano-shaders"]
gl-debug-output = []
backend-gl=["gl"]


[profile.dev]
[profile.release]
debug=true


[dependencies]
anymap = "0.12.1"
hibitset = "0.5.4"
slsengine_entityalloc = {path="slsengine_entityalloc"}
slsengine_shaders = {path="slsengine_shaders"}
bitflags = "1.0.4"
cgmath = {version="0.16.1", features=["swizzle"]}
env_logger = "0.6.0"
failure = "0.1.3"
genmesh = "0.6.2"
gl = {path ="lib/gl", optional=true}
image = "0.20.1"
log = "0.4"
memoffset = "0.2.1"
serde = "1.0.79"
serde_derive = "1.0.80"
stb_image = "0.2.2"
toml = "0.4.9"
vulkano = {version= "0.11.1", optional= true}
vulkano-shaders = {version= "0.11.0", optional= true}


    [dependencies.rand]
     version = "0.5.5"
     default-features = true 
    [dependencies.gltf]
    version = "0.11"
    features = ["extras", "names"]

    [dependencies.sdl2]
    version="0.32.1"
