[package]
name = "slsengine"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition="2018"

[features]
default=["backend-vulkan", "gl-debug-output"]
backend-vulkan = [ "vulkano", "vulkano-shaders"]
gl-debug-output = []
backend-gl=["gl"]


[profile.dev]
[profile.release]
debug=true


[dependencies]
mopa = "0.2.2"
hibitset = "0.5.4"
lazy_static = "1.3.0"
slsengine_entityalloc = {path="slsengine_entityalloc"}
bitflags = "1.0.4"
cgmath = {version="0.17.0", features=["swizzle"]}
env_logger = "0.6.1"
failure = "0.1.5"
genmesh = "0.6.2"
gl = {path ="lib/gl", optional=true}
image = "0.20.1"
log = "0.4"
memoffset = "0.3.0"
serde = "1.0.90"
serde_derive = "1.0.90"
stb_image = "0.2.2"
rayon = "1.0.3"
specs = {version="0.14.3"}
specs-derive = "0.4.0"
toml = "0.5.0"
vulkano = {version= "0.11.1", optional= true}
vulkano-shaders = {version= "0.11.0", optional= true}
smart-default = "0.5.2"


    [dependencies.rand]
     version = "0.5.5"
     default-features = true 
    [dependencies.gltf]
    version = "0.11.3"
    features = ["extras", "names"]

    [dependencies.sdl2]
    version="0.32.1"
