[package]
name = "slsengine"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition="2018"

[features]



[profile.dev]
[profile.release]
debug=true


[dependencies]
mopa = "0.2.2"
hibitset = "0.5.4"
lazy_static = "1.3.0"
slsengine_entityalloc = {path="slsengine_entityalloc"}
slsengine-render = {path="slsengine-render", features=["backend-gl", "gl-debug-output"]}
bitflags = "1.0.4"
cgmath = {version="0.17.0", features=["swizzle"]}
env_logger = "0.6.1"
failure = "0.1.5"
genmesh = "0.6.2"
image = "0.20.1"
log = "0.4"
memoffset = "0.3.0"
serde = "1.0.90"
serde_derive = "1.0.90"
stb_image = "0.2.2"
rayon = "1.0.3"
specs = {version="0.14.3"}
specs-derive = "0.4.0"
toml = "0.5.0"
smart-default = "0.5.2"

[dependencies.sdl2]
  version="0.32.2"


[dependencies.rand]
  version = "0.5.5"
  default-features = true
[dependencies.gltf]
  version = "0.11.3"
  features = ["extras", "names"]


