[package]
name = "slsengine-backend-gl"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

[dependencies]
slsengine-platform-sdl = {path="../slsengine-platform-sdl"}
slsengine-renderer = {path="../slsengine-renderer"}
failure = "0.1.5"
log = "0.4"


[dependencies.gl]
    path ="../lib/gl"
