[package]
name = 'slsengine-backend-webgl'
version = '0.1.0'
authors = ['Steve Shea <stevenlsjr@gmail.com>']
edition = '2018'
license = 'MIT'
description='Webgl Renderer backend'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen='0.2.45'
js-sys='0.3.22'

console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.4"
log = "0.4.6"

wasm-bindgen-futures = "0.3.22"
futures="0.1"


[dependencies.web-sys]
version = '0.3.22'
features=[
 'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

#[dependencies.slsengine-render]
#path='../slsengine-render'
#default-features=false