[package]
name = "slsengine-render"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "gfx-backend-gl/glutin"]
wgl = ["gfx-backend-gl", "gfx-backend-gl/wgl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []
bin-deps = ["env_logger"]

[[bin]]
name = "slsengine-sample"
path = "bin/main.rs"
required-features = ["bin-deps"]

[dependencies]
mopa = "0.2.2"
hibitset = "0.5.4"
lazy_static = "1.3.0"
slsengine_entityalloc = {path="../slsengine_entityalloc"}
bitflags = "1.0.4"
cgmath = {version="0.17.0", features=["swizzle"]}
failure = "0.1.5"
genmesh = "0.6.2"

image = "0.20.1"
log = "0.4"
memoffset = "0.5.2"
serde = "1.0.90"
serde_derive = "1.0.90"
stb_image = "0.2.2"
rayon = "1.0.3"
specs = {version="0.14.3"}
specs-derive = "0.4.0"
toml = "0.5.0"
smart-default = "0.5.2"

# gfx-rs stuff
hal = {  version = "0.4", package = "gfx-hal" }
gfx-backend-empty = { version = "0.4" }

env_logger = { version = "0.6.1" , optional=true}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glsl-to-spirv = "0.1.4"

[dependencies.gfx-backend-gl]
version = "0.4"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.51"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
version = "0.4"
features = ["x11"]
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.4"
optional = true

# platform deps

[dependencies.gltf]
    version = "0.11.3"
    features = ["extras", "names"]

[dependencies.sdl2]
    version="0.32.1"