[package]
name = "slsengine_entityalloc"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mopa = "0.2.2"
serde = "^1.0.90"
serde_derive = "^1.0.90"
log = "0.4.6"

[dependencies.wasm-bindgen]
version="0.2.43"
features=["serde-serialize"]


[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
js-sys="0.3.20"
[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version="0.3.20"
features=["console", ]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
