[package]
name = "vulkan"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

[dependencies]
slsengine-platform-sdl = {path="../../slsengine-platform-sdl"}

slsengine-backend-vk = {path="../../slsengine-backend-vk"}
slsengine  = {path="../.."}
failure = "0.1.5"
log = "0.4"
