[package]
name = "slsengine-run-ios"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
[dependencies]
bitflags = "1.0.4"
cgmath = {version="0.16.1", features=["swizzle"]}
env_logger = "0.6.0"
failure = "0.1.3"
log = "0.4"
serde = "1.0.79"
serde_derive = "1.0.80"
toml = "0.4.9"
[dependencies.slsengine]
    path = "../.."
    features = []
[dependencies.sdl2]
    git = "https://github.com/AngryLawyer/rust-sdl2.git"

  